  flexible but the most common scenarios are less cumbersome since there are
  no 'super' wildcards to deal with when constructing pipelines and no need to
  deal with sub-types when implementing your own operators.

* Added generic type parameters to ListCrossover, ListOrderCrossover and
  ListOrderMutation to be compatible with the above change.


Changes in version 0.5.0
------------------------

* Added wildcard to generic parameter of Console select method.

* Added check to ensure that there is always at least one termination condition
  specified.

* Improved reflection in RendererAdapter and InteractiveSelection.  Previously
  they tried to access classes that may not have been visible to them.

* Introduced tree-based genetic programming example application.

* Added Probability class.  This immutatble value type encapsulates a
  probability value between zero and one.  The class enforces the 0..1 bounds
  and provides convenient methods for working with probabilities.  Using the
  Probability type is an improvement over the previous approach of using double
  values since there is now no need to duplicate bounds-checking and other
  logic throughout the code.

* Introduced new Swing component (ProbabilityParameterControl) for manipulating
  Probability parameters from a GUI.

* Javadoc improvements.

* Relaxed generic constraints on EvolutionObservers (generic type can now be
  less specific than the EvolutionEngine type).  Added wildcard to
  populationUpdate method of EvolutionObserver to support this.

* Renamed StandaloneEvolutionEngine to ConcurrentEvolutionEngine.

* Introduced SequentialEvolutionEngine, which performs all work synchronously
  on the request thread, making it suitable for use in restricted/managed
  environments that do not permit direct control over threading.

* Use only integer labels for the generations axis on the Evolution Monitor's
  fitness view.


Changes in version 0.4.3
------------------------
