@@ -1,0 +1,23 @@
+// ============================================================================
+//   Copyright 2006, 2007, 2008 Daniel W. Dyer
+//
+//   Licensed under the Apache License, Version 2.0 (the "License");
+//   you may not use this file except in compliance with the License.
+//   You may obtain a copy of the License at
+//
+//       http://www.apache.org/licenses/LICENSE-2.0
+//
+//   Unless required by applicable law or agreed to in writing, software
+//   distributed under the License is distributed on an "AS IS" BASIS,
+//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+//   See the License for the specific language governing permissions and
+//   limitations under the License.
+// ============================================================================
+/**
+ * An evolutionary art example application inspired by Roger Alsing's evolution of the
+ * Mona Lisa (http://rogeralsing.com/2008/12/07/genetic-programming-evolution-of-mona-lisa/).
+ * It attempts to find the combination of 50 translucent polygons that most closely
+ * resembles Leonardo da Vinci's Mona Lisa.
+ * @author Daniel Dyer
+ */
+package org.uncommons.watchmaker.examples.monalisa;
